Corrects the positioning of the banner in top navigation. Also, removes the overflow hidden that skewed the placement of icons. Also, removes the data-transform on the sign-in icon to position it correctly. [Fixes #123]

--- a/css/usajobs-design-system-base--help-center.css
+++ b/css/usajobs-design-system-base--help-center.css
@@ -7643,8 +7643,6 @@ html {
   .usajobs-nav__first_name {
     display: inline-block;
     max-width: 13rem;
-    text-overflow: ellipsis;
-    overflow: hidden;
   }
 }
 
@@ -8116,6 +8114,13 @@ html {
   .usajobs-nav--core-v2__menu-container {
     padding: 0 3rem;
   }
+}
+
+.usajobs-nav--core-v2__header-container {
+  position: relative;
+  max-width: 160rem;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .usajobs-nav--core-v2__section-link {
